--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@
 /[Ss]erver[Dd]ata/
 /[Aa]ssets/[Pp]ackages/
 /[Aa]ssets/[Tt]ext[Mm]esh [Pp]ro/*
-/[Aa]ssets/[Ff]onts/[Aa]tlases/*
+/[Aa]ssets/[Ff]onts/*
 
 .DS_Store
 
