--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,7 +1,6 @@
 {
   "dependencies": {
-
-    "com.unity.addressables": "2.5.0",
+    "com.cysharp.unitask": "https://github.com/Cysharp/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask",
     "com.unity.2d.animation": "10.1.4",
     "com.unity.2d.aseprite": "1.1.9",
     "com.unity.2d.pixel-perfect": "5.0.3",
@@ -9,7 +8,7 @@
     "com.unity.2d.spriteshape": "10.0.7",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.2d.tilemap.extras": "4.1.0",
-
+    "com.unity.addressables": "2.5.0",
     "com.unity.collab-proxy": "2.8.2",
     "com.unity.feature.2d": "2.0.1",
     "com.unity.feature.development": "1.0.2",
