--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,5 @@
 {
   "dependencies": {
-
     "com.cysharp.unitask": "https://github.com/Cysharp/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask",
     "com.unity.2d.animation": "10.1.4",
     "com.unity.2d.aseprite": "1.1.9",
@@ -18,6 +17,7 @@
     "com.unity.recorder": "5.1.2",
     "com.unity.timeline": "1.8.7",
     "com.unity.ugui": "2.0.0",
+    "com.unity.uiextensions": "git@github.com:Unity-UI-Extensions/com.unity.uiextensions.git",
     "com.unity.visualscripting": "1.9.6",
     "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
